<?xml version="1.0"?>
<package>
  <name>diana_powertrain</name>
  <version>0.0.1</version>
  <description>handles the powertrain of the diana rover</description>
  <maintainer email="clynamen@gmail.com">clynamen</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/team-diana/diana_powertrain</url>
  <author email="clynamen@gmail.com">Vincenzo Giovanni Comito</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>team_diana_lib</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>team_diana_lib</run_depend>
  <export>
  </export>
</package>
